--- a/app/assets/stylesheets/products_new.scss
+++ b/app/assets/stylesheets/products_new.scss
@@ -16,22 +16,19 @@
   width: 100%;
 }
 @mixin required-design{
+  height: 18px;
   font-size: 12px;
   background-color: #ff0000;
   color: #ffffff;
   margin-left: 8px;
   padding: 0 4px;
-  flex: auto;
   border-radius: 2px;
   display: inline-block;
   font-style: normal;
   font-weight: 600;
-  line-height: 1.4em;
   option{
     font-weight: normal;
     display: block;
-    white-space: pre;
-    min-height: 1.2em;
     padding: 0px 2px 1px;
   }
 }
@@ -255,18 +252,8 @@
             font-weight: 600;
             margin-right: 5px;
           }
-          .listing-default--require{
-            font-size: 12px;
-            background-color: #ff0000;
-            color: #ffffff;
-            margin-left: 8px;
-            padding: 0 4px;
-            flex: auto;
-            border-radius: 2px;
-            display: inline-block;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 1.4em;
+          .required{
+            @include required-design;
           }
           .listing-select-wrapper{
             font-size: 14px;
@@ -499,9 +486,11 @@
           .selling_price{
             color: #000000;
             height: 100%;
-            line-height: 48px;
+            display: flex;
+            align-items: center;
             .required{
               @include required-design;
+ 
             }
           }
           .price_input_form{
