商品出品機能の編集時のカテゴリ表示の修正

--- a/app/assets/stylesheets/products_new.scss
+++ b/app/assets/stylesheets/products_new.scss
@@ -259,6 +259,7 @@
             font-size: 14px;
             padding-top: 20px;
             &__box{
+              margin-top: 10px;
               select{
                 @include selector-design;
               }
