--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -97,7 +97,7 @@
                   %th
                     発送元の地域
                   %td
-                    =link_to @shippingMethod.name
+                    =link_to @deliveryArea.name
                 %tr
                   %th
                     発送日の目安
