--- a/app/views/users/credit.html.haml
+++ b/app/views/users/credit.html.haml
@@ -8,7 +8,7 @@
     .credit_area
       .credit_box
         .credit_tag
-          = link_to new_card_path do
+          = link_to new_card_path, "data-turbolinks": false do
             %button.credit_btn{:type => "submit"} <b>クレジットカードを追加する</b>
     .credit_area_bottom
       = link_to "#" do
