--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -4,7 +4,7 @@
     .main-visual__content
       %h2.main-visual__content--subtitle
         %br/
-        人生を変えるフリマアプリ
+        人生を変えるフリマアプリtest
       %p.main-visual__content--text
         FURIMAはだれでもかんたんに出品・購入できる
         %br/
